k8s/recomendaciones/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recomendaciones
  namespace: mercadourbano
spec:
  selector:
    app: recomendaciones
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
